[gd_scene load_steps=22 format=2]

[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Enemy/EnemySprites/walk6.png" type="Texture" id=2]
[ext_resource path="res://Enemy/EnemySprites/walk4.png" type="Texture" id=3]
[ext_resource path="res://Enemy/EnemySprites/walk10.png" type="Texture" id=4]
[ext_resource path="res://Enemy/EnemySprites/idle.png" type="Texture" id=5]
[ext_resource path="res://Enemy/EnemySprites/walk1.png" type="Texture" id=6]
[ext_resource path="res://Enemy/EnemySprites/walk12.png" type="Texture" id=7]
[ext_resource path="res://Enemy/EnemySprites/walk11.png" type="Texture" id=8]
[ext_resource path="res://Enemy/EnemySprites/walk8.png" type="Texture" id=9]
[ext_resource path="res://Enemy/EnemySprites/walk5.png" type="Texture" id=10]
[ext_resource path="res://Enemy/EnemySprites/walk9.png" type="Texture" id=11]
[ext_resource path="res://Enemy/EnemySprites/walk2.png" type="Texture" id=12]
[ext_resource path="res://Enemy/EnemySprites/walk3.png" type="Texture" id=13]
[ext_resource path="res://Enemy/EnemySprites/walk7.png" type="Texture" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 3 ), ExtResource( 10 ), ExtResource( 2 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 83.7243, 121.716 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 123.823
height = 118.265

[sub_resource type="CapsuleShape2D" id=4]
radius = 116.558
height = 164.115

[sub_resource type="CircleShape2D" id=5]
radius = 109.853

[sub_resource type="CapsuleShape2D" id=6]
radius = 79.5856
height = 392.605

[sub_resource type="CapsuleShape2D" id=7]
radius = 53.8696
height = 127.478

[node name="Enemy" type="KinematicBody2D"]
collision_mask = 9
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 66.001, 8.91908 )
scale = Vector2( 4.5444, 4.5444 )
frames = SubResource( 1 )
animation = "walk"
frame = 2

[node name="ground_check" type="RayCast2D" parent="."]
position = Vector2( 644.213, 216.993 )
scale = Vector2( 2, 2 )
enabled = true

[node name="player_checker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 3

[node name="CollisionShape2D4" type="CollisionShape2D" parent="player_checker"]
position = Vector2( -194.186, 184.084 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="player_checker"]
position = Vector2( -257.681, 4.91577 )
rotation = 2.17294
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_checker"]
position = Vector2( -29.7993, 160.453 )
rotation = -1.13929
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="player_checker"]
position = Vector2( -384.409, -151.595 )
shape = SubResource( 5 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="player_checker"]
position = Vector2( 351.742, 232.022 )
rotation = -1.54719
shape = SubResource( 6 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="player_checker"]
position = Vector2( -301.947, -235.201 )
rotation = 0.616455
shape = SubResource( 7 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="."]
position = Vector2( -194.186, 184.084 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( -257.681, 4.91577 )
rotation = 2.17294
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -29.7993, 160.453 )
rotation = -1.13929
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -384.409, -151.595 )
shape = SubResource( 5 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="."]
position = Vector2( 351.742, 232.022 )
rotation = -1.54719
shape = SubResource( 6 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="."]
position = Vector2( -301.947, -235.201 )
rotation = 0.616455
shape = SubResource( 7 )

[node name="Fade_Timer" type="Timer" parent="."]

[connection signal="body_entered" from="player_checker" to="." method="_on_player_checker_body_entered"]
[connection signal="timeout" from="Fade_Timer" to="." method="_on_Fade_Timer_timeout"]
